decaf_PA2_B/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | WhileStmt
  31       | RepeatStmt ';'
  32       | ForStmt
  33       | SwitchStmt
  34       | ReturnStmt ';'
  35       | PrintStmt ';'
  36       | BreakStmt ';'
  37       | StmtBlock

  38  SimpleStmt : LValue '=' Expr
  39             | RunableExpr
  40             |

  41  Receiver : Expr '.'
  42           |

  43  LValue : Receiver IDENTIFIER
  44         | Expr '[' Expr ']'

  45  Call : Receiver IDENTIFIER '(' Actuals ')'

  46  Expr : LValue
  47       | RunableExpr
  48       | Constant
  49       | Expr '+' Expr
  50       | Expr '-' Expr
  51       | Expr '*' Expr
  52       | Expr '/' Expr
  53       | Expr '%' Expr
  54       | Expr EQUAL Expr
  55       | Expr NOT_EQUAL Expr
  56       | Expr '<' Expr
  57       | Expr '>' Expr
  58       | Expr LESS_EQUAL Expr
  59       | Expr GREATER_EQUAL Expr
  60       | Expr AND Expr
  61       | Expr OR Expr
  62       | '(' Expr ')'
  63       | '-' Expr
  64       | '!' Expr
  65       | READ_INTEGER '(' ')'
  66       | READ_LINE '(' ')'
  67       | THIS
  68       | NEW IDENTIFIER '(' ')'
  69       | NEW Type '[' Expr ']'
  70       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  71       | '(' CLASS IDENTIFIER ')' Expr
  72       | Expr '?' Expr ':' Expr

  73  RunableExpr : Call
  74              | Expr INC
  75              | Expr DEC
  76              | INC Expr
  77              | DEC Expr

  78  Constant : LITERAL
  79           | NULL

  80  Actuals : ExprList
  81          |

  82  ExprList : ExprList ',' Expr
  83           | Expr

  84  WhileStmt : WHILE '(' Expr ')' Stmt

  85  RepeatStmt : REPEAT Stmt UNTIL '(' Expr ')'

  86  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  87  BreakStmt : BREAK

  88  IfStmt : IF '(' Expr ')' Stmt ElseClause

  89  ElseClause : ELSE Stmt
  90             |

  91  ReturnStmt : RETURN Expr
  92             | RETURN

  93  PrintStmt : PRINT '(' ExprList ')'

  94  SwitchStmt : SWITCH '(' Expr ')' SwitchBlock

  95  SwitchBlock : '{' Cases '}'

  96  Cases : Cases Case
  97        | Cases DefaultCase
  98        |

  99  Case : CASE Expr ':' CaseBlock

 100  DefaultCase : DEFAULT ':' CaseBlock

 101  CaseBlock : StmtList

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (40)
	Receiver : .  (42)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	REPEAT  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	SWITCH  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	DEC  shift 61
	INC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	'{'  shift 41
	'}'  shift 66
	IDENTIFIER  reduce 42
	';'  reduce 40

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 69
	SimpleStmt  goto 70
	IfStmt  goto 71
	WhileStmt  goto 72
	RepeatStmt  goto 73
	ForStmt  goto 74
	SwitchStmt  goto 75
	ReturnStmt  goto 76
	PrintStmt  goto 77
	BreakStmt  goto 78
	LValue  goto 79
	Expr  goto 80
	RunableExpr  goto 81
	Receiver  goto 82
	Call  goto 83
	Constant  goto 84


state 46
	Constant : NULL .  (79)

	.  reduce 79


state 47
	Expr : THIS .  (67)

	.  reduce 67


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (84)

	'('  shift 85
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (86)

	'('  shift 86
	.  error


state 50
	RepeatStmt : REPEAT . Stmt UNTIL '(' Expr ')'  (85)
	SimpleStmt : .  (40)
	Receiver : .  (42)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	REPEAT  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	SWITCH  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	DEC  shift 61
	INC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	'{'  shift 41
	IDENTIFIER  reduce 42
	';'  reduce 40

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 87
	SimpleStmt  goto 70
	IfStmt  goto 71
	WhileStmt  goto 72
	RepeatStmt  goto 73
	ForStmt  goto 74
	SwitchStmt  goto 75
	ReturnStmt  goto 76
	PrintStmt  goto 77
	BreakStmt  goto 78
	LValue  goto 79
	Expr  goto 80
	RunableExpr  goto 81
	Receiver  goto 82
	Call  goto 83
	Constant  goto 84


state 51
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (88)

	'('  shift 88
	.  error


state 52
	ReturnStmt : RETURN . Expr  (91)
	ReturnStmt : RETURN .  (92)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	DEC  shift 61
	INC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42
	';'  reduce 92

	LValue  goto 89
	Expr  goto 90
	RunableExpr  goto 91
	Receiver  goto 82
	Call  goto 83
	Constant  goto 84


state 53
	BreakStmt : BREAK .  (87)

	.  reduce 87


state 54
	Expr : NEW . IDENTIFIER '(' ')'  (68)
	Expr : NEW . Type '[' Expr ']'  (69)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 92
	.  error

	Type  goto 93


state 55
	SwitchStmt : SWITCH . '(' Expr ')' SwitchBlock  (94)

	'('  shift 94
	.  error


state 56
	PrintStmt : PRINT . '(' ExprList ')'  (93)

	'('  shift 95
	.  error


state 57
	Expr : READ_INTEGER . '(' ')'  (65)

	'('  shift 96
	.  error


state 58
	Expr : READ_LINE . '(' ')'  (66)

	'('  shift 97
	.  error


state 59
	Constant : LITERAL .  (78)

	.  reduce 78


state 60
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (70)

	'('  shift 98
	.  error


state 61
	RunableExpr : DEC . Expr  (77)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	DEC  shift 61
	INC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 99
	RunableExpr  goto 91
	Receiver  goto 82
	Call  goto 83
	Constant  goto 84


state 62
	RunableExpr : INC . Expr  (76)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	DEC  shift 61
	INC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 100
	RunableExpr  goto 91
	Receiver  goto 82
	Call  goto 83
	Constant  goto 84


state 63
	Expr : '-' . Expr  (63)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	DEC  shift 61
	INC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 101
	RunableExpr  goto 91
	Receiver  goto 82
	Call  goto 83
	Constant  goto 84


state 64
	Expr : '!' . Expr  (64)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	DEC  shift 61
	INC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 102
	RunableExpr  goto 91
	Receiver  goto 82
	Call  goto 83
	Constant  goto 84


state 65
	Expr : '(' . Expr ')'  (62)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (71)
	Receiver : .  (42)

	CLASS  shift 103
	NULL  shift 46
	THIS  shift 47
	NEW  shift 54
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	DEC  shift 61
	INC  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 104
	RunableExpr  goto 91
	Receiver  goto 82
	Call  goto 83
	Constant  goto 84


state 66
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 67
	Stmt : VariableDef .  (27)

	.  reduce 27


state 68
	Stmt : StmtBlock .  (37)

	.  reduce 37


state 69
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 70
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 105
	.  error


state 71
	Stmt : IfStmt .  (29)

	.  reduce 29


state 72
	Stmt : WhileStmt .  (30)

	.  reduce 30


state 73
	Stmt : RepeatStmt . ';'  (31)
